changing zooming issue on mobile

--- a/src/styles/wrapper.css
+++ b/src/styles/wrapper.css
@@ -1,6 +1,6 @@
 * {
     font-family: 'Ubuntu', sans-serif;
-    font-size: '16px';
+    /* font-size: '16px'; */
     background-color:darkslategray;
     color:#dcded9;  
 }
